--- a/.github/workflows/goCI.yml
+++ b/.github/workflows/goCI.yml
@@ -15,5 +15,7 @@ jobs: #job to execute on event
     - name: Setup Go environment
       uses: actions/setup-go@v2.1.3
       with:
-      # The Go version to download (if necessary) and use. Supports semver spec and ranges.
+        # The Go version to download (if necessary) and use. Supports semver spec and ranges.
         go-version: 1.16.5 # optional 
+    - name: show Go version
+      run: go version
