--- a/.github/workflows/goCI.yml
+++ b/.github/workflows/goCI.yml
@@ -19,3 +19,11 @@ jobs: #job to execute on event
         go-version: 1.16.5 # optional 
     - name: show Go version
       run: go version
+      
+    - name: Checkout our codes # bring repo code to virtual environment
+      uses: actions/checkout@v2
+      
+    - name: Check file system #check virtual environment has my files
+      run: |
+        ls
+        cat calc.go        #prints the content of calc.go
