--- a/.github/workflows/goCI.yml
+++ b/.github/workflows/goCI.yml
@@ -16,7 +16,7 @@ jobs: #job to execute on event
       uses: actions/setup-go@v2.1.3
       with:
         # The Go version to download (if necessary) and use. Supports semver spec and ranges.
-        go-version: 1.16.5 # optional 
+        go-version: 1.13.7 # optional 
     - name: show Go version
       run: go version
       
@@ -39,3 +39,9 @@ jobs: #job to execute on event
         ls
         cat myText.txt
         cd ..
+    - name: Install dependencies for GO
+      run:
+        go get github.com/franela/goblin 
+        go get github.com/tebeka/go2xunit
+        go test -v
+     
