--- a/.github/workflows/goCI.yml
+++ b/.github/workflows/goCI.yml
@@ -40,7 +40,7 @@ jobs: #job to execute on event
         cat myText.txt
         cd ..
     - name: Install dependencies for GO
-      run:
+      run: |
         go get github.com/franela/goblin 
         go get github.com/tebeka/go2xunit
         go test -v
