--- a/.github/workflows/goCI.yml
+++ b/.github/workflows/goCI.yml
@@ -51,4 +51,15 @@ jobs: #job to execute on event
       if: always() #always do it
       with:
         files: report.xml #make use of a file we created
+    - if: ${{ failure() }}
+      name: Create Issues Notifications
+      uses: nashmaniac/creste-issue-action@v1.1
+  
+      with:
+        title: Build Failed
+        token: ${{secrets.GITHUB_TOKEN}}
+        assignees: ${{github.actor}}
+        labels: workflow-failed
+        body: Workflow failed for commit ${{github.sha}}
+      
       
