--- a/.github/workflows/goCI.yml
+++ b/.github/workflows/goCI.yml
@@ -51,6 +51,21 @@ jobs: #job to execute on event
       if: always() #always do it
       with:
         files: report.xml #make use of a file we created
+    - if: ${{ success() }}
+      name: Create Upload directory
+      run: mkdir upload
+    - name: Prepare Documents
+      run: mv report.xml ./upload
+    - name: Prepare artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: assetDocuments
+        path: upload
+    - name: Download Content
+      uses: actions/download-artifact@v2
+      with:
+       name: assetDocuments
+      
     - if: ${{ failure() }}
       name: Create Issues Notifications
       uses: nashmaniac/create-issue-action@v1.1
