--- a/.github/workflows/goCD.yml
+++ b/.github/workflows/goCD.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out codes
-        uses: action/checkout@v2
+        uses: actions/checkout@v2
       - name: Validate the Go Codes
         uses: goreleaser/goreleaser-action@v2.6.1
         with:
